# cmpe273-gdrl

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
agent/: __main__.py  decider.py  decision_log.py  feature_extractor.py  main.py  metrics_client.py  policy_writer.py  predictor.py  pyproject.toml  requirements.txt
agent/tests/: test_decider.py  test_feature_extractor.py  test_predictor.py
docs/: contracts.md  demo-script.md  failure-modes.md  naming.md  project-brief.md  sync-constitution.md  sync-session-handoff.md
docs/superpowers/plans/: 2026-04-30-sync-service-implementation.md
docs/superpowers/specs/: 2026-04-25-sync-service-design.md
gateway/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  main.go
gateway/internal/handler/: handler.go  handler_test.go
infra/: docker-compose.sync-only.yml  prometheus.yml
scripts/: solo-demo.sh
simulator/: README.md  __main__.py  cli.py  populations.py  pyproject.toml  requirements.txt  runner.py  scenarios.py
sync/: CONTEXT.md  Dockerfile  Dockerfile.dev  __main__.py  admin.py  buffer.py  counter.py  crdt.py  envelope.py  metrics.py  partition_table.py  pyproject.toml  reconciler.py  relay.py  requirements-dev.txt  requirements.txt  service.py  transport.py
sync/dev/: gateway_stub.py  sync_cli.py
sync/tests/: conftest.py
sync/tests/chaos/: test_convergence.py  test_redis_failure.py
sync/tests/chaos/results/: convergence_20260503-071116.txt
sync/tests/e2e/: test_basic_propagation.py  test_partition.py
sync/tests/integration/: test_admin.py  test_counter_redis.py  test_gateway_stub.py  test_reconciler.py  test_relay.py  test_transport_pubsub.py
sync/tests/unit/: test_buffer.py  test_crdt.py  test_envelope.py  test_partition_table.py
(+20 files in other folders)
