[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gdrl-simulator"
version = "0.1.0"
description = "Traffic simulator and metrics pipeline for gdrl"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "click>=8.1",
    "uvloop>=0.19",
]

[project.scripts]
simulate = "simulator.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
