[project]
name = "sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.1",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[redis]>=4.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["sync/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
